--- a/2- Mini-projets/02_sort/heapsort.ipynb
+++ b/2- Mini-projets/02_sort/heapsort.ipynb
@@ -75,9 +75,7 @@
     "tableau en $N \\ln N$ opérations. \n",
     "Son algorithme s'écrit :\n",
     "\n",
-    "![image.png](attachment:image.png)\n",
-    "\n",
-    "* Implémenter l'algorithme de tri rapide."
+    "![image.png](attachment:image.png)"
    ]
   },
   {
@@ -140,6 +138,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Tenir compte que la liste T est en entrée-sortie. On a de la chance que l'algorithme de tri fonctionne encore\n",
+    "sans faire de copie du tableau passé en entrée. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -186,16 +206,26 @@
    "outputs": [],
    "source": [
     "import timeit\n",
+    "import sys \n",
+    "     \n",
+    "# Set the stack size to 100000 \n",
+    "sys.setrecursionlimit(100000) \n",
     "\n",
     "def f(N):\n",
     "    T = [_ for _ in range(N, 0, -1)]\n",
     "    tri_bulle(T)\n",
     "    return T\n",
     "\n",
+    "def g(N):\n",
+    "    T = [_ for _ in range(N, 0, -1)]\n",
+    "    tri_rapide(T, 0, N-1)\n",
+    "    return T\n",
+    "\n",
     "N=1000\n",
     "%timeit T=f(N)\n",
+    "%timeit T=g(N)\n",
     "\n",
-    "T=f(N)\n",
+    "T=g(N)\n",
     "print(T)"
    ]
   },
@@ -214,9 +244,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "T=[3, 1, 5, 4, 2]\n",
-    "%timeit U=sorted(T)\n",
-    "#T.sort()\n",
+    "def h(N):\n",
+    "    T = [_ for _ in range(N, 0, -1)]\n",
+    "    return sorted(T)\n",
+    "\n",
+    "N=1000\n",
+    "%timeit h(N)\n",
+    "U=h(N)\n",
     "print(U)"
    ]
   },
@@ -227,6 +261,25 @@
    "outputs": [],
    "source": [
     "help(T.sort)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Que fait le code suivant?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N=1000\n",
+    "T = [_ for _ in range(N, -N-1, -1)]\n",
+    "T.sort(key=lambda x: x*x)   # une fonction lambda est une fonction s'écrivant en une seule ligne.\n",
+    "print(T)"
    ]
   }
  ],
