--- a/1- Notebooks/00_python/obsolete/04_python_modules_old.ipynb
+++ b/1- Notebooks/00_python/obsolete/04_python_modules_old.ipynb
@@ -70,11 +70,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Comment travailler avec plusieurs fichiers\n",
-    "\n",
-    "### 1- Dans le même dossier\n",
-    "\n",
-    "- On peut importer les fonctions définies dans un autre fichier du même répertoire\n"
+    "#  Comment créer son propre \"package\"\n",
+    "On a créé un répertoire  **fibonacci** contenant  les  scripts \\_\\_init\\_\\_.py et fib_gen.py.\n",
+    "Le premier est exécuté lors de l'importation.\n"
    ]
   },
   {
@@ -83,18 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import fichier2\n",
-    "from fichier3 import fonction3\n",
-    "\n",
-    "fichier2.fonction1()\n",
-    "fonction3()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Il est également possible d'importer les fonctions définies dans un sous-dossier."
+    "#__init__.py\n",
+    "print('module fibonacci imported')"
    ]
   },
   {
@@ -103,24 +91,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sous_dossier import fichier1\n",
-    "from sous_dossier.fichier2 import fonction2\n",
-    "import sous_dossier.fichier3 as f3\n",
+    "#fib_gen.py\n",
+    "\"\"\" fibonacci series \"\"\"\n",
     "\n",
-    "fichier1.fonction1()\n",
-    "fonction2()\n",
-    "f3.fonction3()"
+    "def fib_gen(n):   # return Fibonacci series up to n\n",
+    "    result = []\n",
+    "    a, b = 0, 1\n",
+    "    while b < n:\n",
+    "        result.append(b)\n",
+    "        a, b = b, a+b\n",
+    "    return result\n",
+    "\n",
+    "# test de la fonction fib\n",
+    "if __name__ == \"__main__\":\n",
+    "    print(fib_gen(10))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2- Création d'un module\n",
-    "Si l'on souhaite utiliser des fonctions définies dans un dossier quelconque, la solution recommandée est de créer un module.\n",
-    "Cela sort du cadre de cet enseignement, mais les 2 étapes principales sont :\n",
-    "- Création d'un répertoire contenant les fichiers source ainsi que quelques fichiers spécifiques.\n",
-    "- Installation en tant que librairie avec la commande \"pip install\" (éventuellement avec l'option -e si on souhaite pouvoir modifer la librairie après son installation)"
+    "Exemple de programme  test  utilisant le package fibonacci"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fibonacci.fib_gen import *\n",
+    "\n",
+    "# test de la fonction table\n",
+    "if __name__ == \"__main__\":\n",
+    "    print(fib_gen(10))"
    ]
   }
  ],
