--- a/1- Notebooks/00_python/04_python_modules.ipynb
+++ b/1- Notebooks/00_python/04_python_modules.ipynb
@@ -70,6 +70,113 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Exemple de création d'un module pour calculer $\\pi$\n",
+    "\n",
+    "On considère 3 méthodes de calcul de $\\pi$.\n",
+    "\n",
+    "Méthode de Leibniz\n",
+    "Utilise une série alternée pour approximer $\\pi$. \n",
+    "\n",
+    "La formule est : \n",
+    "$\n",
+    "\\pi \\approx 4 \\left( 1 - \\frac{1}{3} + \\frac{1}{5} - \\frac{1}{7} + \\frac{1}{9} - \\ldots \\right).\n",
+    "$\n",
+    "\n",
+    "Méthode de Monte Carlo\n",
+    "Utilise une méthode probabilistique basée sur la simulation. \n",
+    "On génère des points aléatoires dans un carré unité et calcule la proportion de points à l'intérieur du quart de cercle unité.\n",
+    "\n",
+    "Méthode de la série de Nilakantha\n",
+    "Utilise une série convergente pour approximer $\\pi$. \n",
+    "\n",
+    "La formule est : \n",
+    "$\n",
+    "\\pi \\approx 3 + \\frac{4}{2 \\cdot 3 \\cdot 4} - \\frac{4}{4 \\cdot 5 \\cdot 6} + \\frac{4}{6 \\cdot 7 \\cdot 8} - \\ldots\n",
+    "$\n",
+    "\n",
+    "Le fichier module_pi.py contient l'implémentation des 3 méthodes et est reproduit ci-après:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Contenu du fichier module_pi.py\n",
+    "import random\n",
+    "import math\n",
+    "\n",
+    "# Méthode de Leibniz\n",
+    "def pi_leibniz(n_terms):\n",
+    "    \"\"\"Méthode de Leibniz\"\"\"\n",
+    "    pi_approx = 0\n",
+    "    for k in range(n_terms):\n",
+    "        pi_approx += (-1)**k / (2*k + 1)\n",
+    "    return 4 * pi_approx\n",
+    "\n",
+    "# Méthode de Monte Carlo\n",
+    "def pi_monte_carlo(n_points):\n",
+    "    \"\"\"Méthode de Monte Carlo\"\"\"\n",
+    "    inside_circle = 0\n",
+    "    for _ in range(n_points):\n",
+    "        x, y = random.random(), random.random()\n",
+    "        if x**2 + y**2 <= 1:\n",
+    "            inside_circle += 1\n",
+    "    return (inside_circle / n_points) * 4\n",
+    "\n",
+    "# Méthode de la série de Nilakantha\n",
+    "def pi_nilakantha(n_terms):\n",
+    "    \"\"\"Méthode de la série de Nilakantha\"\"\"\n",
+    "    pi_approx = 3\n",
+    "    sign = 1\n",
+    "    for i in range(2, 2 * n_terms + 1, 2):\n",
+    "        pi_approx += sign * (4 / (i * (i + 1) * (i + 2)))\n",
+    "        sign *= -1\n",
+    "    return pi_approx\n",
+    "\n",
+    "# Exemple d'utilisation des méthodes\n",
+    "if __name__ == \"__main__\":\n",
+    "    terms = 10000\n",
+    "    points = 10000\n",
+    "\n",
+    "    print(\"Approximation de Pi avec la méthode de Leibniz :\", pi_leibniz(terms))\n",
+    "    print(\"Approximation de Pi avec la méthode de Monte Carlo :\", pi_monte_carlo(points))\n",
+    "    print(\"Approximation de Pi avec la méthode de Nilakantha :\", pi_nilakantha(terms))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Utilisation du module :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import module_pi\n",
+    "\n",
+    "terms = 10000\n",
+    "points = 10000\n",
+    "\n",
+    "# Utiliser les différentes méthodes pour calculer Pi\n",
+    "pi_leibniz = module_pi.pi_leibniz(terms)\n",
+    "pi_monte_carlo = module_pi.pi_monte_carlo(points)\n",
+    "pi_nilakantha = module_pi.pi_nilakantha(terms)\n",
+    "\n",
+    "print(\"Approximation de Pi avec la méthode de Leibniz :\", pi_leibniz)\n",
+    "print(\"Approximation de Pi avec la méthode de Monte Carlo :\", pi_monte_carlo)\n",
+    "print(\"Approximation de Pi avec la méthode de Nilakantha :\", pi_nilakantha)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#  Comment travailler avec plusieurs fichiers\n",
     "\n",
     "### 1- Dans le même dossier\n",
